# lloom

./: README.md
text_lloom/: pyproject.toml
text_lloom/src/text_lloom/: concept_induction.py  llm.py  workbench.py
text_lloom/src/text_lloom/static/: index.css  index.js  index_select.css  index_select.js
